--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "lint": "eslint src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run build && node scripts/test-mcp.js",
+    "test:interactive": "npm run build && node scripts/interactive.js",
+    "test:tools": "npm run build && node scripts/test-tools.js"
   },
   "keywords": [
     "mcp",
